--- a/index.html
+++ b/index.html
@@ -18,11 +18,78 @@
   </style> -->
 </head>
 
-<body>
-    <section class="grid grid-rows-2 bg-blue-700 h-[300px] w-[250px] pl-10 text-white rounded-lg">
-        <div> Report for Jeremy Robsin</div>
-        <div class="bg-blue-950 w-[250px] h-[200px]">Daily <br> weekly <br> monthly</div>
-    </section>
+<body class="bg-slate-950">
+    <div class="w-4/5 mx-auto my-20 grid md:grid-cols-4 grid-cols-1 
+    md:grid-rows-[200px_200px] grid-rows-[repeat(7,250px)] gap-4 text-white">
+        <div class="bg-blue-950 md:row-span-2 rounded-xl   text-white">
+
+            <div class="bg-blue-600 md:h-3/4 rounded-2xl p-5 ">
+                <img src="./image-jeremy.png" alt="#" class=" w-20 h-20 rounded-full border-2 border-r-white ">
+                <p class="mt-8 font-extralight text-xs">Report for</p>
+                <h1 class="text-3xl">Jeremy Robson</h1>
+            </div>
+
+            <p class="p-1 ml-3">Daily</p>
+            <p class="p-1 ml-3">Weekly</p>
+            <p class="p-1 ml-3 text-gray-400 font-extralight text-xs">Monthly</p>
+        </div>
+        <div class="bg-orange-400 rounded-2xl">
+            <img src="./suitcase.svg" alt="" class="float-right w-12 h-12">
+            <div class="bg-blue-950 rounded-2xl md:h-[150px] mt-[50px] h-[200px] p-5">
+                <div><img src="./icon-ellipsis.svg" alt="" class="float-right">
+                    <p class="font-bold">work</p>
+                    <p class="mt-6 text-2xl">10 hours</p>
+                    <p class="text-gray-400 font-extralight text-xs">Last Week - 36hrs</p>
+                </div>
+            </div>
+        </div>
+        <div class="bg-blue-400 rounded-2xl">
+            <img src="./icon-play.svg" alt="" class="float-right w-12 h-10">
+            <div class="bg-blue-950 rounded-2xl md:h-[150px] mt-[50px] h-[200px] p-5">
+                <img src="./icon-ellipsis.svg" alt="" class="float-right">
+                <p class="font-bold">play </p>
+                <p class="mt-6 text-2xl">10 hours</p>
+                <p class="text-gray-400 font-extralight text-xs">Last Week - 8hrs</p>
+            </div>
+        </div>
+        <div class="bg-red-300 rounded-2xl">
+            <img src="./icon-study.svg" alt="" class="float-right w-12 h-12">
+            <div class="bg-blue-950 rounded-2xl md:h-[150px] mt-[50px] h-[200px] p-5">
+                <img src="./icon-ellipsis.svg" alt="" class="float-right">
+                <p class="font-bold">Study</p>
+                <p class="mt-6 text-2xl">4 hours</p>
+                <p class="text-gray-400 font-extralight text-xs">Last Week - 7hrs</p>
+            </div>
+        </div>
+        <div class="bg-green-400 rounded-2xl">
+            <img src="./icon-exercise.svg" alt="" class="float-right w-12 h-12">
+            <div class="bg-blue-950 rounded-2xl md:h-[150px] mt-[50px] h-[200px] p-5">
+                <img src="./icon-ellipsis.svg" alt="" class="float-right">
+                <p class="font-bold">Exercise</p>
+                <p class="mt-6 text-2xl">4 hours</p>
+                <p class="text-gray-400 font-extralight text-xs">Last Week - 5hrs</p>
+            </div>
+        </div>
+        <div class="bg-purple-700 rounded-2xl">
+            <img src="./icon-social.svg" alt="" class="float-right w-12 h-12">
+            <div class="bg-blue-950 rounded-2xl md:h-[150px] mt-[50px] h-[200px] p-5">
+                <img src="./icon-ellipsis.svg" alt="" class="float-right">
+                <p class="font-bold">Social </p>
+                <p class="mt-6 text-2xl">5 hours</p>
+                <p class="text-gray-400 font-extralight text-xs">Last Week - 10hrs</p>
+            </div>
+        </div>
+        <div class="bg-yellow-300 rounded-2xl">
+            <img src="./icon-self-care.svg" alt="" class="float-right w-12 h-12">
+            <div class="bg-blue-950 rounded-2xl md:h-[150px] mt-[50px] h-[200px] p-5">
+                <img src="./icon-ellipsis.svg" alt="" class="float-right">
+                <p class="font-bold">Self Care</p>
+                <p class="mt-6 text-2xl">2 hours</p>
+                <p class="text-gray-400 font-extralight text-xs">Last Week - 2hrs</p>
+            </div>
+        </div>
+
+    </div>
 </body>
 
 </html>
