--- a/index.html
+++ b/index.html
@@ -24,14 +24,20 @@
         <div class="bg-blue-950 md:row-span-2 rounded-xl   text-white">
 
             <div class="bg-blue-600 md:h-3/4 rounded-2xl p-5 ">
-                <img src="./image-jeremy.png" alt="#" class=" w-20 h-20 rounded-full border-2 border-r-white ">
+                <img src="./image-jeremy.png" alt="#" class=" w-20 h-20 rounded-full border-2 border-r-white hover:animate-bounce">
                 <p class="mt-8 font-extralight text-xs">Report for</p>
                 <h1 class="text-3xl">Jeremy Robson</h1>
             </div>
-
-            <p class="p-1 ml-3">Daily</p>
+            <div class="">
+                <ul class="flex flex-row justify-evenly md:flex-col md:p-5">
+                    <li>Daily</li>
+                    <li>weekly</li>
+                    <li>monthly</li>
+                </ul>
+            </div>
+            <!-- <p class="p-1 ml-3">Daily</p>
             <p class="p-1 ml-3">Weekly</p>
-            <p class="p-1 ml-3 text-gray-400 font-extralight text-xs">Monthly</p>
+            <p class="p-1 ml-3 text-gray-400 font-extralight text-xs">Monthly</p> -->
         </div>
         <div class="bg-orange-400 rounded-2xl">
             <img src="./suitcase.svg" alt="" class="float-right w-12 h-12">
