--- a/index.html
+++ b/index.html
@@ -44,8 +44,12 @@
             <div class="bg-blue-950 rounded-2xl md:h-[150px] mt-[50px] h-[200px] p-5">
                 <div><img src="./icon-ellipsis.svg" alt="" class="float-right">
                     <p class="font-bold">work</p>
-                    <p class="mt-6 text-2xl">10 hours</p>
-                    <p class="text-gray-400 font-extralight text-xs">Last Week - 36hrs</p>
+                    <div>
+                        <ul class="flex justify-between mt-8 md:flex-col">
+                            <li class="text-2xl">32hrs</li>
+                            <li class="text-gray-400 font-extralight">Last Week - 36hrs</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
@@ -54,17 +58,25 @@
             <div class="bg-blue-950 rounded-2xl md:h-[150px] mt-[50px] h-[200px] p-5">
                 <img src="./icon-ellipsis.svg" alt="" class="float-right">
                 <p class="font-bold">play </p>
-                <p class="mt-6 text-2xl">10 hours</p>
-                <p class="text-gray-400 font-extralight text-xs">Last Week - 8hrs</p>
+                <div>
+                    <ul class="flex justify-between mt-8 md:flex-col">
+                        <li class="text-2xl">10hrs</li>
+                        <li class="text-gray-400 font-extralight">Last Week - 36hrs</li>
+                    </ul>
+                </div>
             </div>
         </div>
-        <div class="bg-red-300 rounded-2xl">
+        <div class="bg-rose-400 rounded-2xl">
             <img src="./icon-study.svg" alt="" class="float-right w-12 h-12">
             <div class="bg-blue-950 rounded-2xl md:h-[150px] mt-[50px] h-[200px] p-5">
                 <img src="./icon-ellipsis.svg" alt="" class="float-right">
                 <p class="font-bold">Study</p>
-                <p class="mt-6 text-2xl">4 hours</p>
-                <p class="text-gray-400 font-extralight text-xs">Last Week - 7hrs</p>
+                <div>
+                    <ul class="flex justify-between mt-8 md:flex-col">
+                        <li class="text-2xl">4hrs</li>
+                        <li class="text-gray-400 font-extralight">Last Week - 36hrs</li>
+                    </ul>
+                </div>
             </div>
         </div>
         <div class="bg-green-400 rounded-2xl">
@@ -72,8 +84,12 @@
             <div class="bg-blue-950 rounded-2xl md:h-[150px] mt-[50px] h-[200px] p-5">
                 <img src="./icon-ellipsis.svg" alt="" class="float-right">
                 <p class="font-bold">Exercise</p>
-                <p class="mt-6 text-2xl">4 hours</p>
-                <p class="text-gray-400 font-extralight text-xs">Last Week - 5hrs</p>
+                <div>
+                    <ul class="flex justify-between mt-8 md:flex-col">
+                        <li class="text-2xl">4hrs</li>
+                        <li class="text-gray-400 font-extralight">Last Week - 36hrs</li>
+                    </ul>
+                </div>
             </div>
         </div>
         <div class="bg-purple-700 rounded-2xl">
@@ -81,8 +97,12 @@
             <div class="bg-blue-950 rounded-2xl md:h-[150px] mt-[50px] h-[200px] p-5">
                 <img src="./icon-ellipsis.svg" alt="" class="float-right">
                 <p class="font-bold">Social </p>
-                <p class="mt-6 text-2xl">5 hours</p>
-                <p class="text-gray-400 font-extralight text-xs">Last Week - 10hrs</p>
+                <div>
+                    <ul class="flex justify-between mt-8 md:flex-col">
+                        <li class="text-2xl">5hrs</li>
+                        <li class="text-gray-400 font-extralight">Last Week - 36hrs</li>
+                    </ul>
+                </div>
             </div>
         </div>
         <div class="bg-yellow-300 rounded-2xl">
@@ -90,8 +110,12 @@
             <div class="bg-blue-950 rounded-2xl md:h-[150px] mt-[50px] h-[200px] p-5">
                 <img src="./icon-ellipsis.svg" alt="" class="float-right">
                 <p class="font-bold">Self Care</p>
-                <p class="mt-6 text-2xl">2 hours</p>
-                <p class="text-gray-400 font-extralight text-xs">Last Week - 2hrs</p>
+                <div>
+                    <ul class="flex justify-between mt-8 md:flex-col">
+                        <li class="text-2xl">2hrs</li>
+                        <li class="text-gray-400 font-extralight">Last Week - 36hrs</li>
+                    </ul>
+                </div>
             </div>
         </div>
 
